Change debian tagging scheme for GitLab errors

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -11,7 +11,7 @@ upstream-branch = master
 debian-branch = debian/sid 
 # the default tag formats used:
 upstream-tag = v%(version)s
-debian-tag = debian/sid/%(version)s
+debian-tag = debian-sid/%(version)s
 #debian-tag-msg = %(pkg)s Debian release %(version)s
 # use pristine-tar:
 #pristine-tar = True
