--- a/touch4/kernel/Makefile
+++ b/touch4/kernel/Makefile
@@ -11,9 +11,12 @@ C_FLAGS = -Wall -O -pipe $(INCLUDE)
 ####################################################################
 
 ifneq ($(KERNELRELEASE),)
+$(info Building with KERNELRELEASE = ${KERNELRELEASE})
 obj-m := $(MODULE).o
 else
-KDIR := /lib/modules/$(shell uname -r)/build
+KVER ?= $(shell uname -r)
+KDIR ?= /lib/modules/$(KVER)/build
+
 PWD := $(shell pwd)
 
 all:
