--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: eta-touchdrv
 Section: kernel
 Priority: optional
 Maintainer: Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>
-Build-Depends: debhelper (>= 9), dkms (>= 1.95), dh-systemd (>= 1.5)
+Build-Depends: debhelper (>= 9), dkms (>= 1.95), dh-systemd (>= 1.5), libx11-6
 Standards-Version: 3.9.6
 Homepage: https://git.pardus.org.tr
 #Vcs-Git: git://anonscm.debian.org/collab-maint/eta-touchdrv.git
